# twirp-grpc

./: .bazel_fix_commands.json  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-twirp-grpc  go.mod  go.sum  repositories.bzl
api/v1/: BUILD.bazel  greeter_service.proto  greeting.proto
cmd/greeter/: BUILD.bazel  main.go
internal/service/: BUILD.bazel  greeter.go  service_test.go
internal/sterror/: BUILD.bazel  convert.go  interceptor.go  interceptor_test.go
