load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

proto_library(
    name = "greeter_proto",
    srcs = [
        "greeter_service.proto",
        "greeting.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "greeter_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        ":go_twirp",  # keep
    ],
    importpath = "github.com/zoido/twirp-grpc/api/v1",
    proto = ":greeter_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_twitchtv_twirp//:go_default_library",
        "@com_github_twitchtv_twirp//ctxsetters:go_default_library",
    ],  # keep
)

go_library(
    name = "go_default_library",
    embed = [":greeter_go_proto"],
    importpath = "github.com/zoido/twirp-grpc/api/v1",
    visibility = ["//visibility:public"],
)

go_proto_compiler(
    name = "go_twirp",
    plugin = "@com_github_twitchtv_twirp//protoc-gen-twirp:protoc-gen-twirp",
    suffix = ".twirp.go",
)
