load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/zoido/twirp-grpc/cmd/greeter",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1:go_default_library",
        "//internal/service:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_zoido_yag_config//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "greeter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
