load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["greeter.go"],
    importpath = "github.com/zoido/twirp-grpc/internal/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
