load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["greeter.go"],
    importpath = "github.com/zoido/twirp-grpc/internal/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/v1:go_default_library",
        "@com_github_twitchtv_twirp//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//api/v1:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@com_github_twitchtv_twirp//:go_default_library",
    ],
)
