load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "convert.go",
        "interceptor.go",
    ],
    importpath = "github.com/zoido/twirp-grpc/internal/sterror",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_twitchtv_twirp//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["interceptor_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//suite:go_default_library",
        "@com_github_twitchtv_twirp//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
